# SRG

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  cliff.toml  manage.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/api/: client.ts  index.ts  types.ts
dashboard/src/components/: Layout.tsx
dashboard/src/hooks/: useDocumentTitle.ts
dashboard/src/pages/: Chat.tsx  Dashboard.tsx  InvoiceDetail.tsx  Invoices.tsx  Search.tsx  Upload.tsx  index.ts
docs/: 2025_07_31_12277643910_7329750351744066.docx  API_ENDPOINTS.md  ARCHITECTURE.md  CATALOG_FLOW.md  CONTEXT_SAVE_2026-01-25.md  CONTRIBUTING.md  EXECUTION_PLAN.md  FLOW.md  HARDENING.md  INVENTORY_FLOW.md  NEXT.md  ONBOARDING.md  REMINDER_INTELLIGENCE.md  REWRITE_GUARDRAILS.md  SMOKE_TEST.md  STATUS.md  TROUBLESHOOTING.md  WEBUI.md  accessibility-audit-report.md  api-reference.md  architecture-diagrams.md  chafta-chapter-3-rules-of-origin-and-implementation-procedures.docx  configuration-reference.md  user-guide.md
src/: __init__.py
src/api/: dependencies.py  main.py
src/api/middleware/: __init__.py  error_handler.py  logging.py
src/api/routes/: __init__.py  amazon_import.py  catalog.py  chat.py  company_documents.py  creators.py  documents.py  health.py  inventory.py  invoices.py  prices.py  reminders.py  sales.py  search.py  sessions.py  templates.py
src/application/: __init__.py  services.py
src/application/dto/: __init__.py  requests.py  responses.py
src/application/use_cases/: __init__.py  add_to_catalog.py  audit_invoice.py  chat_with_context.py  check_expiring_documents.py  create_sales_invoice.py  create_sales_pdf.py  (+7 more)
src/config/: __init__.py  logging.py  settings.py
src/core/: __init__.py  exceptions.py
src/infrastructure/: __init__.py
src/srg/: __init__.py  config.py  main.py
static/: index.html
static/assets/: index-Dn9vpHkx.js  index-trPuviLm.css
tests/: conftest.py
tests/api/: test_catalog.py  test_catalog_matches.py  test_company_documents.py  test_health.py  test_ingest_material.py  test_inventory.py  test_invoice_catalog_fields.py  test_invoices.py  test_manual_match.py  test_prices.py  test_reminder_insights.py  test_reminders.py  test_sales.py  test_search.py  test_sessions.py
tests/core/: test_exceptions.py
tests/integration/: test_catalog_flow.py  test_chat_endpoint_mocked_llm.py  test_health_endpoints.py  test_inventory_flow.py  test_template_store.py  test_upload_and_audit_flow_with_mocks.py
tests/unit/: __init__.py  test_fpdf2_renderer.py  test_template_renderer.py
tools/: restart_server.ps1  run_all.ps1  verify_all.ps1
webui/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
webui/src/: App.tsx  index.css  main.tsx  theme.ts
(+185 files in other folders)
